Fixed user sidebar in posts on mobile #3

--- a/less/topic.less
+++ b/less/topic.less
@@ -144,7 +144,7 @@
 				}
 			}
 			
-			@media (max-width: @screen-xs-max) {
+			@media (max-width: @screen-sm-max) {
 				.post-user-sidebar {
 					.icon {
 						margin-top: 0px;
@@ -152,10 +152,7 @@
 					
 					.panel-body.clearfix {
 						padding: 0;
-						
-						small {
-							text-align: left;
-						}
+						text-align: left;
 					}
 				}
 			}
